# LxNotes

./: CONTRIBUTING.md  README.md  main.py  pyrightconfig.json
.github/workflows/: lxbinman-ci.yml
LxBinMan/: README.md  pyproject.toml
LxBinMan/binman/: __init__.py  autobin.py  manifest.py
LxBinMan/examples/: lxmonitor_snippet.py
LxBinMan/lxbinman/: __init__.py  __main__.py  autobin.py  builder.py  error_trap.py  feedback.py  manifest.py
LxBinMan/moduleapi/: __init__.py  autobin.py  builder.py  feedback.py
LxCharset/: pyrightconfig.json
LxCharset/Module/: __init__.py
LxCharset/Module/LxCharset/core/cpp/: CMakeLists.txt
LxCharset/Module/LxCharset/core/cpp/include/: detector.hpp
LxCharset/Module/LxCharset/core/cpp/src/: detector.cpp
assets/: config.json
assets/languages/: ar.json  de-de.json  en-us.json  es-es.json  fr-fr.json  it-it.json  ja-jp.json  ko.json  pl-pl.json  pt-br.json  ru-ru.json  sv.json  uk-ua.json  vi.json  zh-cn.json
assets/styles/: dark.qss  light.qss
core/bootstrap/: app_bootstrap.py
core/cengines/: lx_engine.cpp
core/editor/: builder.py  console_logic.py  editor_manager.py  editor_tab.py  engine_build_task.py  language_handler.py
docs/: LXCHARSET_API.md  stability_notes.md
scripts/: run_checks.sh
tests/: test_console_logic_help.py  test_dialogs_smoke.py  test_file_handler_lxcharset.py  test_file_handler_ops.py  test_find_replace_cpp_path.py  test_language_keys_consistency.py  test_large_viewer.py  test_lxbinman_smoke.py  test_quick_open_dialog.py  test_session_safe_status.py  test_startup_smoke.py
(+73 files in other folders)
